--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
     "require": {
         "guzzlehttp/guzzle": "~6.0",
-        "jaeger/querylist": "^4.0"
+        "jaeger/querylist": "^4.0",
+        "zqhong/route": "dev-master"
+    },
+    "autoload": {
+        "classmap": [
+
+        ],
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
