--- a/info.plist
+++ b/info.plist
@@ -67,7 +67,7 @@
 				<key>runningsubtext</key>
 				<string>please wait...</string>
 				<key>script</key>
-				<string>/usr/local/bin/php public/index.php {query}</string>
+				<string>/usr/local/bin/php public/index.php php:functionManual {query}</string>
 				<key>subtext</key>
 				<string>test</string>
 				<key>title</key>
