--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
 .DS_Store
 .idea
-/vendor
-.env
 /.svn
 /storage
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
 
