--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+YOUDAO_APP_ID=xxxxx
+YOUDAO_APP_SECRET_KEY=xxxx
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
