增加配置注释

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+
+# 有道翻译相关秘钥配置。如果没有，可以去 https://ai.youdao.com/ 申请
 YOUDAO_APP_ID=xxxxx
 YOUDAO_APP_SECRET_KEY=xxxx
 
